@@ -64,6 +64,7 @@ wxUpdateUIMode          T_ENUM
 wxWindowVariant         T_ENUM
 wxImageResizeQuality    T_ENUM
 wxAlignment             T_ENUM
+wxScrollbarVisibility   T_ENUM
 
 wxFindReplaceDialogStyles T_ENUM
 wxFindReplaceFlags      T_ENUM
